namespace HikanyanLaboratory.Task.Script.Othello.Animation
{
    public class TweenMovement
    {
        
    }
}