namespace HikanyanLaboratory.Task.Script.Othello.Infrastructure
{
    public class IOthelloRepository
    {
        
    }
}