namespace HikanyanLaboratory.Task.Script.Othello.Infrastructure
{
    public class OthelloRepository : IOthelloRepository
    {
    }
}