namespace HikanyanLaboratory.Task.Script.Othello.Model
{
    public class Player
    {
        public int Color { get; set; }
    }
}